# rPack

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  elf_original.txt
.github/workflows/: cols.yml  rust.yml
rpack/: Cargo.toml  README.md  build.rs
rpack/aes/: Cargo.toml
rpack/aes/src/: lib.rs
rpack/checksum/: Cargo.toml
rpack/checksum/src/: lib.rs
rpack/rpack/: Cargo.toml  build.rs
rpack/rpack/src/: main.rs
rpack/src/: main.rs
rpack/stub/: Cargo.toml
rpack/stub/src/: BIGMONKE  BIGMONKE.c  main.rs
rpack/tests/: files.cpp  hello.c
rpack/whitebox/: README.md
rpack/whitebox/src/: create_wb.rs  decrypt.rs  encrypt.rs  lattice.rs  lib.rs  main.rs
src/: main.rs  packer.rs  stub.rs
src/compress/: lz77.rs  mod.rs
src/crypto/: mod.rs
src/crypto/WB/: README.rs  create_wb.rs  encrypt.rs  lattice.rs  mod.rs
src/crypto/aes/: aes.rs  mod.rs
src/stub/: stub.rs
src/test_files/: helloworld
stub/: Cargo.toml
stub/src/: BIGMONKE  BIGMONKE.c  main.rs
tests/: Makefile  hello_world_c.elf  run_tests.py
tests/tests/: hello.go
tmp/: index.html  stub
website/: Cargo.toml  backend.py  index.html
website/backend/: backend.py  startup.sh
website/frontend/: index.html  style.css
website/frontend/downloads/: index.html
website/src/: main.rs
whitebox/: Cargo.toml  README.md
whitebox/src/: encrypt.rs  lattice.rs  lib.rs
whitebox_py/: create_WB.py  decrypt.py  encrypt.py  main.py
whitebox_rs/: Cargo.toml  README.md
whitebox_rs/src/: create_wb.rs  decrypt.rs  encrypt.rs  lattice.rs  main.rs
(+2 files in other folders)
