[package]
name = "rpack"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
num-integer = "0.1"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4"
numpy = "0.20.0"
ndarray = { version = "0.15.6", features = ["serde"] }
hex = "0.4.3"
