[package]
name = "stub"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
rand = "0.8.5"
ctor = "0.1.20"
bincode = "1.3"
lz4_flex = "0.11"
raw-cpuid = "11.1.0"
aes = { path = "../aes" }
serde = { version = "1.0", features = ["derive"] }
whitebox = { path = "../whitebox" }
checksum = { path = "../checksum" }
