[package]
name = "rpack"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
lz4_flex = "0.11"
rand = "0.8.5"
aes = { path = "../aes" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
whitebox = { path = "../whitebox" }
ndarray = { version = "0.15.6", features = ["serde"] }
